# janus-rtp2gstipc-plugin

./: .gitignore  Makefile.am  README.md  configure.ac  janus_rtp2gstipc.c  janus_rtp2gstipc.h  rtp2gst.c  rtp2gst.h
demo/: jspm.json  package-lock.json  package.json
demo/src/: rtpforward-plugin.js
